force-app/main/default/objects/Objetivo__c/Objetivo__c.object-meta.xml
<CustomObject>
    <label>Objetivo</label>
    <nameField>
        <displayFormat>O-{0000}</displayFormat>
        <label>Nombre de Objetivo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Objetivos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>