force-app/main/default/objects/Objetivo__c/fields/ComisionReservas__c.field-meta.xml
<CustomField>
    <fullName>ComisionReservas__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Porcentaje a aplicar en el cálculo de comisiones tras el cumplimiento de los objetivos</description>
    <label>% comisión reservas tras cumplimiento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>