force-app/main/default/objects/Objetivo__c/fields/FechaLimiteObjetivo__c.field-meta.xml
<CustomField>
    <fullName>FechaLimiteObjetivo__c</fullName>
    <description>Fecha hasta la que se analizará el cumplimiento del objetivo. Superada la fecha, el objetivo se consideraría incumplido</description>
    <label>Fecha límite Objetivo</label>
    <required>true</required>
    <type>Date</type>
</CustomField>