force-app/main/default/objects/Objetivo__c/fields/GarajesAlcanzados__c.field-meta.xml
<CustomField>
    <fullName>GarajesAlcanzados__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Garajes vendidos hasta el momento</description>
    <label>Garajes alcanzados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>