force-app/main/default/objects/Objetivo__c/fields/ImporteAlcanzado__c.field-meta.xml
<CustomField>
    <fullName>ImporteAlcanzado__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Importe vendido hasta el momento</description>
    <label>Importe alcanzado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>