force-app/main/default/objects/Objetivo__c/fields/LocalesAlcanzados__c.field-meta.xml
<CustomField>
    <fullName>LocalesAlcanzados__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Locales vendidos hasta el momento</description>
    <label>Locales alcanzados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>