force-app/main/default/objects/Objetivo__c/fields/ObjetivoCumplido__c.field-meta.xml
<CustomField>
    <fullName>ObjetivoCumplido__c</fullName>
    <description>Cuando los valores alcanzados superen a los valores objetivos, se marcará a TRUE</description>
    <formula>ImporteAlcanzado__c &gt;= ObjetivoImporte__c  &amp;&amp;  ViviendasAlcanzadas__c &gt;=ObjetivoViviendas__c &amp;&amp; GarajesAlcanzados__c &gt;=ObjetivoGarajes__c &amp;&amp; TrasterosAlcanzados__c&gt;=ObjetivoTrasteros__c &amp;&amp; LocalesAlcanzados__c&gt;=ObjetivoLocales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Objetivo cumplido</label>
    <type>Checkbox</type>
</CustomField>