force-app/main/default/objects/Objetivo__c/fields/ObjetivoGarajes__c.field-meta.xml
<CustomField>
    <fullName>ObjetivoGarajes__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Número de garajes que debe vender para cumplir el objetivo</description>
    <label>Objetivo garajes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>