force-app/main/default/objects/Objetivo__c/fields/ObjetivoImporte__c.field-meta.xml
<CustomField>
    <fullName>ObjetivoImporte__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Importe objetivo a cumplir</description>
    <label>Objetivo importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>