force-app/main/default/objects/Objetivo__c/fields/ObjetivoLocales__c.field-meta.xml
<CustomField>
    <fullName>ObjetivoLocales__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Número de trasteros que debe vender para cumplir el objetivo</description>
    <label>Objetivo locales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>