force-app/main/default/objects/Objetivo__c/fields/ObjetivoViviendas__c.field-meta.xml
<CustomField>
    <fullName>ObjetivoViviendas__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Número de viviendas que debe vender para cumplir el objetivo</description>
    <label>Objetivo viviendas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>