force-app/main/default/objects/Objetivo__c/fields/Promocion__c.field-meta.xml
<CustomField>
    <fullName>Promocion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Promoción a la que afecta el objetivo</description>
    <label>Promoción</label>
    <referenceTo>Promocion__c</referenceTo>
    <relationshipLabel>Objetivos</relationshipLabel>
    <relationshipName>Objetivos</relationshipName>
    <type>Lookup</type>
</CustomField>