force-app/main/default/objects/Objetivo__c/fields/TrasterosAlcanzados__c.field-meta.xml
<CustomField>
    <fullName>TrasterosAlcanzados__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Trasteros vendidos hasta el momento</description>
    <label>Trasteros alcanzados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>