force-app/main/default/objects/Objetivo__c/fields/Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Vendedor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Vendedor al que afecta el objetivo</description>
    <label>Vendedor</label>
    <referenceTo>Vendedor__c</referenceTo>
    <relationshipLabel>Objetivos</relationshipLabel>
    <relationshipName>Objetivos</relationshipName>
    <type>Lookup</type>
</CustomField>