force-app/main/default/objects/Objetivo__c/fields/ViviendasAlcanzadas__c.field-meta.xml
<CustomField>
    <fullName>ViviendasAlcanzadas__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Viviendas vendidas hasta el momento</description>
    <label>Viviendas alcanzadas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>