force-app/main/default/objects/Objetivo__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Promocion__c</columns>
    <columns>Vendedor__c</columns>
    <columns>FechaLimiteObjetivo__c</columns>
    <columns>ObjetivoCumplido__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>